--- a/views/admin/activity/form_activity.ejs
+++ b/views/admin/activity/form_activity.ejs
@@ -10,12 +10,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Blank Page</h1>
+            <h1>Form Activity</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Blank Page</li>
+              <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
+              <li class="breadcrumb-item active">Activity Form</li>
             </ol>
           </div>
         </div>
@@ -41,56 +41,102 @@
         </div>
         <div class="card-body">
             <section class="content">
-                <div class="row">
-                  <div class="col-md-12">
-                      <div class="card card-primary">
-                        <div class="card-header">
-                          <h3 class="card-title">General</h3>
-            
-                          <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
-                              <i class="fas fa-minus"></i>
-                            </button>
-                          </div>
-                        </div>
-                        <div class="card-body">
-                          <div class="form-group">
-                            <label for="inputName">Project Name</label>
-                            <input type="text" id="inputName" class="form-control">
-                          </div>
-                          <div class="form-group">
-                            <label for="inputDescription">Project Description</label>
-                            <textarea id="inputDescription" class="form-control" rows="4"></textarea>
-                          </div>
-                          <div class="form-group">
-                            <label for="inputStatus">Status</label>
-                            <select id="inputStatus" class="form-control custom-select">
-                              <option selected disabled>Select one</option>
-                              <option>On Hold</option>
-                              <option>Canceled</option>
-                              <option>Success</option>
-                            </select>
-                          </div>
-                          <div class="form-group">
-                            <label for="inputClientCompany">Client Company</label>
-                            <input type="text" id="inputClientCompany" class="form-control">
-                          </div>
-                          <div class="form-group">
-                            <label for="inputProjectLeader">Project Leader</label>
-                            <input type="text" id="inputProjectLeader" class="form-control">
-                          </div>
-                        </div>
-                        <!-- /.card-body -->
+              <form action="" method="post">
+                  <div class="row">
+                      <div class="col-md-12">
+                            <div class="card card-primary">
+                              <div class="card-header">
+                                <h3 class="card-title">New Activity Form</h3>
+                                <div class="card-tools">
+                                  <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                                    <i class="fas fa-minus"></i>
+                                  </button>
+                                </div>
+                              </div>
+                                <div class="card-body">
+                                    <div class="form-group">
+                                      <label for="Fullname">Fullname</label>
+                                      <input type="text" id="Fullname" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="Department">Department</label>
+                                      <input type="text" id="Department" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="Tanggal">Tanggal</label>
+                                      <input type="date" id="Tanggal" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="inputDescription">Project Description</label>
+                                      <textarea id="inputDescription" class="form-control" rows="4"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="jobType">Job Type</label>
+                                      <select id="jobType" class="form-control custom-select">
+                                        <option selected disabled>Select one</option>
+                                        <option>AFS</option>
+                                        <option>SE</option>
+                                        <option>Presales</option>
+                                        <option>---</option>
+                                        <option>TS</option>
+                                        <option>RnD</option>
+                                        <option>SE</option>
+                                        <option>Presales</option>
+                                      </select>
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="case">Case</label>
+                                      <input type="text" id="case" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="actionPlan">Action Plan</label>
+                                      <textarea id="actionPlan" class="form-control" rows="4"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="Location">Location</label>
+                                      <input type="text" id="Location" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="solving">Solving</label>
+                                      <textarea id="solving" class="form-control" rows="4"></textarea>
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="inputStatus">Status</label>
+                                      <select id="inputStatus" class="form-control custom-select">
+                                        <option selected disabled>Select one</option>
+                                        <option>Pending</option>
+                                        <option>Success</option>
+                                      </select>
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="pic">PIC</label>
+                                      <input type="text" id="pic" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="Position">Position</label>
+                                      <input type="text" id="Position" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="phone">Phone Number</label>
+                                      <input type="number" id="phone" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="remaks">Remaks</label>
+                                      <textarea id="remaks" class="form-control" rows="4"></textarea>
+                                    </div>
+                                </div>
+                              <!-- /.card-body -->
+                            </div>
+                          <!-- /.card -->
                       </div>
-                      <!-- /.card -->
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                      <a href="#" class="btn btn-secondary">Cancel</a>
-                      <input type="submit" value="Create new Activity" class="btn btn-success float-right">
-                    </div>
-                </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-12">
+                          <a href="#" class="btn btn-secondary">Cancel</a>
+                          <input type="submit" value="Create new Activity" class="btn btn-success float-right">
+                      </div>
+                  </div>
+              </form>
             </section>
         </div>
         <!-- /.card-body -->
