--- a/views/admin/users/view_users.ejs
+++ b/views/admin/users/view_users.ejs
@@ -72,36 +72,15 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>183</td>
-                            <td>John Doe</td>
-                            <td>11-7-2014</td>
-                            <td><span class="tag tag-success">Approved</span></td>
-                            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                            <td>edit</td>
-                          </tr>
-                          <tr>
-                            <td>219</td>
-                            <td>Alexander Pierce</td>
-                            <td>11-7-2014</td>
-                            <td><span class="tag tag-warning">Pending</span></td>
-                            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                            <td>edit</td>
-                          </tr>
-                          <tr>
-                            <td>657</td>
-                            <td>Bob Doe</td>
-                            <td>11-7-2014</td>
-                            <td><span class="tag tag-primary">Approved</span></td>
-                            <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                            <td>edit</td>
-                          </tr>
-                          <tr>
                             <td>175</td>
                             <td>Mike Doe</td>
                             <td>11-7-2014</td>
                             <td><span class="tag tag-danger">Denied</span></td>
                             <td>Bacon ipsum dolor sit amet salami venison chicken flank fatback doner.</td>
-                            <td>edit</td>
+                            <td>
+                              <a href="/users/edit" class="btn btn-primary">edit</a>
+                              <a href="/users/delete" class="btn btn-danger">delete</a>
+                            </td>
                           </tr>
                         </tbody>
                       </table>
