--- a/views/admin/users/edit_users.ejs
+++ b/views/admin/users/edit_users.ejs
@@ -110,7 +110,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <input type="submit" value="Create new Users" class="btn btn-success float-right">
+                            <input type="submit" value="Edit new Users" class="btn btn-success float-right">
                         </div>
                     </div>
                  </form>
