edit struktur folder

--- a/views/admin/users/view_users.ejs
+++ b/views/admin/users/view_users.ejs
@@ -79,8 +79,8 @@
                               <td><%= user.email %></td>
                               <td><%= user.department %></td>
                               <td>
-                                <a href="/users/edit" class="btn btn-primary">edit</a>
-                                <a href="/users/delete" class="btn btn-danger">delete</a>
+                                <a href="/edit" class="btn btn-primary">edit</a>
+                                <a href="/delete" class="btn btn-danger">delete</a>
                               </td>
                             </tr>
                            <% } %>
@@ -95,7 +95,7 @@
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
-          <a href="/users/add" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
+          <a href="/add" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
         </div>
         <!-- /.card-footer-->
       </div>
