--- a/views/admin/users/view_users.ejs
+++ b/views/admin/users/view_users.ejs
@@ -95,7 +95,7 @@
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
-          <a href="/add" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
+          <a href="/users/add" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Add</a>
         </div>
         <!-- /.card-footer-->
       </div>
