--- a/views/admin/activity/add.ejs
+++ b/views/admin/activity/add.ejs
@@ -64,65 +64,65 @@
                                     </div>
                                     <div class="form-group">
                                       <label for="Tanggal">Tanggal</label>
-                                      <input type="date" id="Tanggal" class="form-control">
+                                      <input type="date" id="Tanggal" name="activityDate" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="inputDescription">Project Description</label>
-                                      <textarea id="inputDescription" class="form-control" rows="4"></textarea>
+                                      <textarea id="inputDescription" class="form-control" name="desc" rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
                                       <label for="jobType">Job Type</label>
-                                      <select id="jobType" class="form-control custom-select">
+                                      <select id="jobType" class="form-control custom-select" name="jobType">
                                         <option selected disabled>Select one</option>
-                                        <option>AFS</option>
-                                        <option>SE</option>
-                                        <option>Presales</option>
+                                        <option value="AFS">AFS</option>
+                                        <option value="SE">SE</option>
+                                        <option value="Presales">Presales</option>
                                         <option>---</option>
-                                        <option>TS</option>
-                                        <option>RnD</option>
-                                        <option>SE</option>
-                                        <option>Presales</option>
+                                        <option value="TS">TS</option>
+                                        <option value="RnD">RnD</option>
+                                        <option value="SE">SE</option>
+                                        <option value="Presales">Presales</option>
                                       </select>
                                     </div>
                                     <div class="form-group">
                                       <label for="case">Case</label>
-                                      <input type="text" id="case" class="form-control">
+                                      <input type="text" id="case" name="case" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="actionPlan">Action Plan</label>
-                                      <textarea id="actionPlan" class="form-control" rows="4"></textarea>
+                                      <textarea id="actionPlan" class="form-control" name="action" rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
                                       <label for="Location">Location</label>
-                                      <input type="text" id="Location" class="form-control">
+                                      <input type="text" id="Location" name="location" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="solving">Solving</label>
-                                      <textarea id="solving" class="form-control" rows="4"></textarea>
+                                      <textarea id="solving" class="form-control" name="solving" rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
                                       <label for="inputStatus">Status</label>
                                       <select id="inputStatus" class="form-control custom-select">
                                         <option selected disabled>Select one</option>
-                                        <option>Pending</option>
-                                        <option>Success</option>
+                                        <option value="1">Pending</option>
+                                        <option value="2">Success</option>
                                       </select>
                                     </div>
                                     <div class="form-group">
                                       <label for="pic">PIC</label>
-                                      <input type="text" id="pic" class="form-control">
+                                      <input type="text" id="pic" name="pic" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="Position">Position</label>
-                                      <input type="text" id="Position" class="form-control">
+                                      <input type="text" id="Position" name="poistion" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="phone">Phone Number</label>
-                                      <input type="number" id="phone" class="form-control">
+                                      <input type="number" id="phone" name="phone" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="remaks">Remaks</label>
-                                      <textarea id="remaks" class="form-control" rows="4"></textarea>
+                                      <textarea id="remaks" class="form-control" name="remaks" rows="4"></textarea>
                                     </div>
                                 </div>
                               <!-- /.card-body -->
