--- a/views/admin/activity/add.ejs
+++ b/views/admin/activity/add.ejs
@@ -56,11 +56,11 @@
                                 <div class="card-body">
                                     <div class="form-group">
                                       <label for="Fullname">Fullname</label>
-                                      <input type="text" id="Fullname" class="form-control">
+                                      <input type="text" id="Fullname" name="fullname" value="<%= user.fullname %>" class="form-control" disabled>
                                     </div>
                                     <div class="form-group">
                                       <label for="Department">Department</label>
-                                      <input type="text" id="Department" class="form-control">
+                                      <input type="text" id="Department" name="department" value="<%= user.department %>" class="form-control" disabled>
                                     </div>
                                     <div class="form-group">
                                       <label for="Tanggal">Tanggal</label>
