--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,15 +18,16 @@
 <div class="login-box">
   <!-- /.login-logo -->
   <div class="card card-outline card-primary">
+    <%- include('./partials/message.ejs') %>
     <div class="card-header text-center">
       <a href="#" class="h1"><b>Activity</b>CSI</a>
     </div>
     <div class="card-body">
       <p class="login-box-msg">Sign in to start your session</p>
 
-      <form method="post">
+      <form action="/" method="POST">
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" name="username" class="form-control" placeholder="Username">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -34,7 +35,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" name="password" class="form-control" placeholder="Password">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
