--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -14,7 +14,7 @@
           <img src="/style/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Anonymouse</a>
+          <a href="#" class="d-block"><%= user.fullname %></a>
         </div>
       </div>
 
@@ -122,7 +122,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="/" class="nav-link">
+            <a href="/logout" class="nav-link">
               <i class="nav-icon fas fa-circle"></i>
               <p>
                 Log out
