--- a/views/admin/users/view_users.ejs
+++ b/views/admin/users/view_users.ejs
@@ -38,6 +38,7 @@
             </button>
           </div>
         </div>
+        <%- include('../../partials/message.ejs') %>
         <div class="card-body">
             <div class="row">
                 <div class="col-12">
